--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cross-env": "7.0.3",
     "express": "^4.21.2",
     "joi": "^17.13.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "eslint": "7.19.0",
