--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.16.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
